feat: modify tool-chain loaders
1. Modify default tool-chain settings.
2. Add variable `${user.dir}` in relevant files `preferences.ini`.

--- a/plugins/org.eclipse.embedcdt.debug.gdbjtag.openocd.core/preferences.ini
+++ b/plugins/org.eclipse.embedcdt.debug.gdbjtag.openocd.core/preferences.ini
@@ -22,84 +22,21 @@ xpack.names=\
 
 # Platform specific defaults.
 search.path.windows=\
-${user.home}/.local/openocd;\
-${user.home}/AppData/Local/openocd;\
-${user.home}/AppData/Roaming/openocd;\
-\
-${user.home}/AppData/Roaming/xPacks/openocd;\
-${user.home}/.local/xPacks/openocd;\
-C:/Program Files/xPacks/openocd;\
-${user.home}/AppData/Roaming/GNU MCU Eclipse/OpenOCD;\
-${user.home}/AppData/Local/GNU MCU Eclipse/OpenOCD;\
-${user.home}/opt/GNU MCU Eclipse/OpenOCD;\
-${user.home}/opt/gnu-mcu-eclipse/openocd;\
-${user.home}/local/GNU MCU Eclipse/OpenOCD;\
-${user.home}/local/gnu-mcu-eclipse/openocd;\
-${user.home}/.local/gnu-mcu-eclipse/openocd;\
-C:/opt/GNU MCU Eclipse/OpenOCD;\
-C:/opt/gnu-mcu-eclipse/openocd;\
-C:/Program Files/GNU MCU Eclipse/OpenOCD;\
-C:/Program Files (x86)/GNU MCU Eclipse/OpenOCD;\
-D:/Program Files/GNU MCU Eclipse/OpenOCD;\
-D:/Program Files (x86)/GNU MCU Eclipse/OpenOCD
+${user.dir}/../toolchains/openocd
 
 search.path.linux=\
-${user.home}/.local/openocd:\
-\
-${user.home}/opt/openocd:\
-${user.home}/opt/xPacks/openocd:\
-${user.home}/.local/xPacks/openocd:\
-${user.home}/opt/gnu-mcu-eclipse/openocd:\
-${user.home}/opt/gnuarmeclipse/openocd:\
-${user.home}/local/gnu-mcu-eclipse/openocd:\
-${user.home}/.local/gnu-mcu-eclipse/openocd:\
-${user.home}/local/gnuarmeclipse/openocd:\
-\
-/opt/openocd:\
-\
-/opt/xPacks/openocd:\
-/opt/gnu-mcu-eclipse/openocd:\
-/opt/gnuarmeclipse/openocd:\
-/opt:\
-/usr/local/gnu-mcu-eclipse/openocd:\
-/usr/local/gnuarmeclipse/openocd:\
-/usr/local
+${user.dir}/../toolchains/openocd
 
 search.path.osx=\
-${user.home}/.local/openocd:\
-${user.home}/Library/openocd:\
-\
-${user.home}/Library/xPacks/openocd:\
-${user.home}/.local/xPacks/openocd:\
-${user.home}/opt/openocd:\
-${user.home}/opt/xPacks/openocd:\
-${user.home}/opt/gnu-mcu-eclipse/openocd:\
-${user.home}/opt/gnuarmeclipse/openocd:\
-${user.home}/local/gnu-mcu-eclipse/openocd:\
-${user.home}/.local/gnu-mcu-eclipse/openocd:\
-${user.home}/local/gnuarmeclipse/openocd:\
-${user.home}/Applications/GNU MCU Eclipse/OpenOCD:\
-${user.home}/Applications/GNU ARM Eclipse/OpenOCD:\
-\
-/opt/openocd:\
-\
-/Applications/GNU MCU Eclipse/OpenOCD:\
-/Applications/GNU ARM Eclipse/OpenOCD:\
-/opt/xPacks/openocd:\
-/opt/gnu-mcu-eclipse/openocd:\
-/opt/gnuarmeclipse/openocd:\
-/opt:\
-/usr/local/gnu-mcu-eclipse/openocd:\
-/usr/local/gnuarmeclipse/openocd:\
-/usr/local
+${user.dir}/../toolchains/openocd
 
 # -----------------------------------------------------------------------------
 
-# Set to true to make the plug-in disable the Debug button if the program name 
+# Set to true to make the plug-in disable the Debug button if the program name
 # is not filled-in.
 tab.main.checkProgram=false
 
-# Set to false to disable the folder check. 
+# Set to false to disable the folder check.
 folder.strict=true
 
 # -----------------------------------------------------------------------------
