--- a/plugins/org.eclipse.embedcdt.managedbuild.cross.riscv.core/preferences.ini
+++ b/plugins/org.eclipse.embedcdt.managedbuild.cross.riscv.core/preferences.ini
@@ -5,7 +5,23 @@
 
 # Default toolchain name.
 #toolchain.name=GNU MCU RISC-V GCC
-toolchain.name=xPack GNU RISC-V Embedded GCC
+#toolchain.name=xPack GNU RISC-V Embedded GCC
+toolchain.name=CWLI xPack 3rd Party RISC-V Embedded GCC
+
+# -----------------------------------------------------------------------------
+# CWLI xPack 3rd Party RISC-V Embedded GCC
+
+toolchain.xpack.names.3315057877=\
+@xpack-dev-tools/riscv-none-elf-gcc
+
+toolchain.search.path.windows.3315057877=\
+${user.dir}/../toolchains/riscv-none-elf-gcc
+
+toolchain.search.path.linux.3315057877=\
+${user.dir}/../toolchains/riscv-none-elf-gcc
+
+toolchain.search.path.osx.3315057877=\
+${user.dir}/../toolchains/riscv-none-elf-gcc
 
 # -----------------------------------------------------------------------------
 # xPack GNU RISC-V Embedded GCC (riscv-none-elf-gcc)
