--- a/plugins/org.eclipse.embedcdt.managedbuild.cross.arm.core/preferences.ini
+++ b/plugins/org.eclipse.embedcdt.managedbuild.cross.arm.core/preferences.ini
@@ -3,49 +3,23 @@
 # Default toolchain name.
 #toolchain.name=GNU Tools for ARM Embedded Processors
 #toolchain.name=GNU MCU Eclipse ARM Embedded GCC
-toolchain.name=xPack GNU Arm Embedded GCC
+#toolchain.name=xPack GNU ARM Embedded GCC
+toolchain.name=CWLI xPack 3rd Party ARM Embedded GCC
 
 # -----------------------------------------------------------------------------
-# xPack GNU Arm Embedded GCC
+# CWLI xPack 3rd Party ARM Embedded GCC
 
-toolchain.xpack.names.435435382=\
-@xpack-dev-tools/arm-none-eabi-gcc;\
-@gnu-mcu-eclipse/arm-none-eabi-gcc
+toolchain.xpack.names.358484712=\
+@xpack-dev-tools/arm-none-eabi-gcc
 
-toolchain.search.path.windows.435435382=\
-${user.home}/.local/arm-none-eabi-gcc;\
-${user.home}/AppData/Local/arm-none-eabi-gcc;\
-${user.home}/AppData/Roaming/arm-none-eabi-gcc;\
-\
-${user.home}/AppData/Roaming/xPacks/arm-none-eabi-gcc;\
-${user.home}/.local/xPacks/arm-none-eabi-gcc;\
-C:/Program Files/xPacks/arm-none-eabi-gcc
+toolchain.search.path.windows.358484712=\
+${user.dir}/../toolchains/arm-none-eabi-gcc
 
-toolchain.search.path.linux.435435382=\
-${user.home}/.local/arm-none-eabi-gcc:\
-\
-${user.home}/opt/xPacks/arm-none-eabi-gcc:\
-${user.home}/opt/arm-none-eabi-gcc:\
-${user.home}/.local/xPacks/arm-none-eabi-gcc:\
-\
-/opt/arm-none-eabi-gcc:\
-\
-/opt/xPacks/arm-none-eabi-gcc:\
-/opt
+toolchain.search.path.linux.358484712=\
+${user.dir}/../toolchains/arm-none-eabi-gcc
 
-toolchain.search.path.osx.435435382=\
-${user.home}/.local/arm-none-eabi-gcc:\
-${user.home}/Library/arm-none-eabi-gcc:\
-\
-${user.home}/.local/xPacks/arm-none-eabi-gcc:\
-${user.home}/Library/xPacks/arm-none-eabi-gcc:\
-${user.home}/opt/xPacks/arm-none-eabi-gcc:\
-${user.home}/opt/arm-none-eabi-gcc:\
-\
-/opt/arm-none-eabi-gcc:\
-\
-/opt/xPacks/arm-none-eabi-gcc:\
-/opt
+toolchain.search.path.osx.358484712=\
+${user.dir}/../toolchains/arm-none-eabi-gcc
 
 # -----------------------------------------------------------------------------
 # GNU MCU Eclipse ARM Embedded GCC
@@ -118,7 +92,7 @@ ${user.home}/.local/gnu-mcu-eclipse/arm-none-eabi-gcc:\
 # -----------------------------------------------------------------------------
 # GNU Tools for ARM Embedded Processors (ARM toolchain)
 
-# Default toolchain path. If not set by the higher classes, it will be set 
+# Default toolchain path. If not set by the higher classes, it will be set
 # after a specific search (in the Windows Registry or in the filesystem
 # toolchain.search.path).
 #toolchain.path.1287942917
@@ -316,6 +290,48 @@ ${user.home}/.local:\
 /opt
 
 # -----------------------------------------------------------------------------
+# xPack GNU ARM Embedded GCC
+
+toolchain.xpack.names.1563575434=\
+@xpack-dev-tools/arm-none-eabi-gcc;\
+@gnu-mcu-eclipse/arm-none-eabi-gcc
+
+toolchain.search.path.windows.1563575434=\
+${user.home}/.local/arm-none-eabi-gcc;\
+${user.home}/AppData/Local/arm-none-eabi-gcc;\
+${user.home}/AppData/Roaming/arm-none-eabi-gcc;\
+\
+${user.home}/AppData/Roaming/xPacks/arm-none-eabi-gcc;\
+${user.home}/.local/xPacks/arm-none-eabi-gcc;\
+C:/Program Files/xPacks/arm-none-eabi-gcc
+
+toolchain.search.path.linux.1563575434=\
+${user.home}/.local/arm-none-eabi-gcc:\
+\
+${user.home}/opt/xPacks/arm-none-eabi-gcc:\
+${user.home}/opt/arm-none-eabi-gcc:\
+${user.home}/.local/xPacks/arm-none-eabi-gcc:\
+\
+/opt/arm-none-eabi-gcc:\
+\
+/opt/xPacks/arm-none-eabi-gcc:\
+/opt
+
+toolchain.search.path.osx.1563575434=\
+${user.home}/.local/arm-none-eabi-gcc:\
+${user.home}/Library/arm-none-eabi-gcc:\
+\
+${user.home}/.local/xPacks/arm-none-eabi-gcc:\
+${user.home}/Library/xPacks/arm-none-eabi-gcc:\
+${user.home}/opt/xPacks/arm-none-eabi-gcc:\
+${user.home}/opt/arm-none-eabi-gcc:\
+\
+/opt/arm-none-eabi-gcc:\
+\
+/opt/xPacks/arm-none-eabi-gcc:\
+/opt
+
+# -----------------------------------------------------------------------------
 # xPack GNU AArch64 Embedded GCC
 
 toolchain.xpack.names.596462749=\
@@ -358,7 +374,7 @@ ${user.home}/opt/aarch64-none-elf-gcc:\
 
 # -----------------------------------------------------------------------------
 
-# Set to false to disable the folder check. 
+# Set to false to disable the folder check.
 global.toolchain.path.strict=true
 global.buildTools.path.strict=true
 workspace.toolchain.path.strict=true
