--- a/plugins/org.eclipse.embedcdt.debug.gdbjtag.qemu.core/preferences.ini
+++ b/plugins/org.eclipse.embedcdt.debug.gdbjtag.qemu.core/preferences.ini
@@ -4,7 +4,7 @@
 
 tab.main.checkProgram=false
 
-# Set to false to disable the folder check. 
+# Set to false to disable the folder check.
 folder.strict=true
 
 # -----------------------------------------------------------------------------
@@ -30,78 +30,13 @@ executable.name.osx=qemu-system-gnuarmeclipse
 
 # Platform specific defaults.
 search.path.windows=\
-${user.home}/.local/qemu-arm;\
-${user.home}/AppData/Local/qemu-arm;\
-${user.home}/AppData/Roaming/qemu-arm;\
-\
-${user.home}/AppData/Roaming/xPacks/qemu-arm;\
-${user.home}/.local/xPacks/qemu-arm;\
-C:/Program Files/xPacks/qemu-arm;\
-${user.home}/AppData/Roaming/GNU MCU Eclipse/QEMU;\
-${user.home}/AppData/Local/GNU MCU Eclipse/QEMU;\
-${user.home}/opt/GNU MCU Eclipse/QEMU;\
-${user.home}/opt/gnu-mcu-eclipse/qemu;\
-${user.home}/local/GNU MCU Eclipse/QEMU;\
-${user.home}/local/gnu-mcu-eclipse/qemu;\
-${user.home}/.local/gnu-mcu-eclipse/qemu;\
-${user.home}/.local/qemu;\
-C:/opt/GNU MCU Eclipse/QEMU;\
-C:/opt/gnu-mcu-eclipse/qemu;\
-C:/Program Files/GNU MCU Eclipse/QEMU;\
-C:/Program Files (x86)/GNU MCU Eclipse/QEMU;\
-D:/Program Files/GNU MCU Eclipse/QEMU;\
-D:/Program Files (x86)/GNU MCU Eclipse/QEMU
+${user.dir}/../toolchains/qemu-arm
 
 search.path.linux=\
-${user.home}/.local/qemu-arm:\
-\
-${user.home}/opt/qemu-arm:\
-${user.home}/opt/xPacks/qemu-arm:\
-${user.home}/.local/xPacks/qemu-arm:\
-${user.home}/opt/gnu-mcu-eclipse/qemu:\
-${user.home}/opt/gnuarmeclipse/qemu:\
-${user.home}/local/gnu-mcu-eclipse/qemu:\
-${user.home}/.local/gnu-mcu-eclipse/qemu:\
-${user.home}/local/gnuarmeclipse/qemu:\
-\
-/opt/qemu-arm:\
-\
-/opt/xPacks/qemu-arm:\
-/opt/gnu-mcu-eclipse/qemu:\
-/opt/gnuarmeclipse/qemu:\
-/opt:\
-/usr/local/gnu-mcu-eclipse/qemu:\
-/usr/local/gnuarmeclipse/qemu:\
-/usr/local
+${user.dir}/../toolchains/qemu-arm
 
 search.path.osx=\
-${user.home}/.local/qemu-arm:\
-${user.home}/Library/qemu-arm:\
-\
-${user.home}/Library/xPacks/qemu-arm:\
-${user.home}/.local/xPacks/qemu-arm:\
-${user.home}/opt/qemu-arm:\
-${user.home}/opt/xPacks/qemu-arm:\
-${user.home}/opt/gnu-mcu-eclipse/qemu:\
-${user.home}/opt/gnuarmeclipse/qemu:\
-${user.home}/local/gnu-mcu-eclipse/qemu:\
-${user.home}/.local/gnu-mcu-eclipse/qemu:\
-${user.home}/local/gnuarmeclipse/qemu:\
-${user.home}/.local/qemu:\
-${user.home}/Applications/GNU MCU Eclipse/QEMU:\
-${user.home}/Applications/GNU ARM Eclipse/QEMU:\
-\
-/opt/qemu-arm:\
-\
-/Applications/GNU MCU Eclipse/QEMU:\
-/Applications/GNU ARM Eclipse/QEMU:\
-/opt/xPacks/qemu-arm:\
-/opt/gnu-mcu-eclipse/qemu:\
-/opt/gnuarmeclipse/qemu:\
-/opt:\
-/usr/local/gnu-mcu-eclipse/qemu:\
-/usr/local/gnuarmeclipse/qemu:\
-/usr/local
+${user.dir}/../toolchains/qemu-arm
 
 # -----------------------------------------------------------------------------
 # qemu-system-gnuarmeclipse (deprecated)
@@ -184,41 +119,13 @@ arm.executable.name.osx=qemu-system-arm
 
 # Platform specific defaults.
 arm.search.path.windows=\
-${user.home}/.local/qemu-arm;\
-${user.home}/AppData/Local/qemu-arm;\
-${user.home}/AppData/Roaming/qemu-arm;\
-\
-${user.home}/AppData/Roaming/xPacks/qemu-arm;\
-${user.home}/.local/xPacks/qemu-arm;\
-C:/Program Files/xPacks/qemu-arm;\
+${user.dir}/../toolchains/qemu-arm
 
 arm.search.path.linux=\
-${user.home}/.local/qemu-arm:\
-\
-${user.home}/opt/qemu-arm:\
-${user.home}/opt/xPacks/qemu-arm:\
-${user.home}/.local/xPacks/qemu-arm:\
-\
-/opt/qemu-arm:\
-\
-/opt/xPacks/qemu-arm:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-arm
 
 arm.search.path.osx=\
-${user.home}/.local/qemu-arm:\
-${user.home}/Library/qemu-arm:\
-\
-${user.home}/Library/xPacks/qemu-arm:\
-${user.home}/.local/xPacks/qemu-arm:\
-${user.home}/opt/qemu-arm:\
-${user.home}/opt/xPacks/qemu-arm:\
-\
-/opt/qemu-arm:\
-\
-/opt/xPacks/qemu-arm:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-arm
 
 # -----------------------------------------------------------------------------
 # qemu-system-aarch64
@@ -242,41 +149,13 @@ aarch64.executable.name.osx=qemu-system-aarch64
 
 # Platform specific defaults.
 aarch64.search.path.windows=\
-${user.home}/.local/qemu-arm;\
-${user.home}/AppData/Local/qemu-arm;\
-${user.home}/AppData/Roaming/qemu-arm;\
-\
-${user.home}/AppData/Roaming/xPacks/qemu-arm;\
-${user.home}/.local/xPacks/qemu-arm;\
-C:/Program Files/xPacks/qemu-arm;\
+${user.dir}/../toolchains/qemu-arm
 
 aarch64.search.path.linux=\
-${user.home}/.local/qemu-arm:\
-\
-${user.home}/opt/qemu-arm:\
-${user.home}/opt/xPacks/qemu-arm:\
-${user.home}/.local/xPacks/qemu-arm:\
-\
-/opt/qemu-arm:\
-\
-/opt/xPacks/qemu-arm:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-arm
 
 aarch64.search.path.osx=\
-${user.home}/.local/qemu-arm:\
-${user.home}/Library/qemu-arm:\
-\
-${user.home}/Library/xPacks/qemu-arm:\
-${user.home}/.local/xPacks/qemu-arm:\
-${user.home}/opt/qemu-arm:\
-${user.home}/opt/xPacks/qemu-arm:\
-\
-/opt/qemu-arm:\
-\
-/opt/xPacks/qemu-arm:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-arm
 
 # -----------------------------------------------------------------------------
 # qemu-system-riscv64
@@ -300,41 +179,13 @@ riscv64.executable.name.osx=qemu-system-riscv64
 
 # Platform specific defaults.
 riscv64.search.path.windows=\
-${user.home}/.local/qemu-riscv;\
-${user.home}/AppData/Local/qemu-riscv;\
-${user.home}/AppData/Roaming/qemu-riscv;\
-\
-${user.home}/AppData/Roaming/xPacks/qemu-riscv;\
-${user.home}/.local/xPacks/qemu-riscv;\
-C:/Program Files/xPacks/qemu-riscv;\
+${user.dir}/../toolchains/qemu-riscv
 
 riscv64.search.path.linux=\
-${user.home}/.local/qemu-riscv:\
-\
-${user.home}/opt/qemu-riscv:\
-${user.home}/opt/xPacks/qemu-riscv:\
-${user.home}/.local/xPacks/qemu-riscv:\
-\
-/opt/qemu-riscv:\
-\
-/opt/xPacks/qemu-riscv:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-riscv
 
 riscv64.search.path.osx=\
-${user.home}/.local/qemu-riscv:\
-${user.home}/Library/qemu-riscv:\
-\
-${user.home}/Library/xPacks/qemu-riscv:\
-${user.home}/.local/xPacks/qemu-riscv:\
-${user.home}/opt/qemu-riscv:\
-${user.home}/opt/xPacks/qemu-riscv:\
-\
-/opt/qemu-riscv:\
-\
-/opt/xPacks/qemu-riscv:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-riscv
 
 # -----------------------------------------------------------------------------
 # qemu-system-riscv32
@@ -358,40 +209,12 @@ riscv32.executable.name.osx=qemu-system-riscv32
 
 # Platform specific defaults.
 riscv32.search.path.windows=\
-${user.home}/.local/qemu-riscv;\
-${user.home}/AppData/Local/qemu-riscv;\
-${user.home}/AppData/Roaming/qemu-riscv;\
-\
-${user.home}/AppData/Roaming/xPacks/qemu-riscv;\
-${user.home}/.local/xPacks/qemu-riscv;\
-C:/Program Files/xPacks/qemu-riscv;\
+${user.dir}/../toolchains/qemu-riscv
 
 riscv32.search.path.linux=\
-${user.home}/.local/qemu-riscv:\
-\
-${user.home}/opt/qemu-riscv:\
-${user.home}/opt/xPacks/qemu-riscv:\
-${user.home}/.local/xPacks/qemu-riscv:\
-\
-/opt/qemu-riscv:\
-\
-/opt/xPacks/qemu-riscv:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-riscv
 
 riscv32.search.path.osx=\
-${user.home}/.local/qemu-riscv:\
-${user.home}/Library/qemu-riscv:\
-\
-${user.home}/Library/xPacks/qemu-riscv:\
-${user.home}/.local/xPacks/qemu-riscv:\
-${user.home}/opt/qemu-riscv:\
-${user.home}/opt/xPacks/qemu-riscv:\
-\
-/opt/qemu-riscv:\
-\
-/opt/xPacks/qemu-riscv:\
-/opt:\
-/usr/local
+${user.dir}/../toolchains/qemu-riscv
 
 # -----------------------------------------------------------------------------
