--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,10 @@
 		<module>plugins/org.eclipse.embedcdt.templates.xpack.ui</module>
 		<module>features/org.eclipse.embedcdt.templates.xpack-feature</module>
 
+		<module>branding/org.eclipse.embedcdt.templates.chirpwow-branding</module>
+		<module>plugins/org.eclipse.embedcdt.templates.chirpwow.ui</module>
+		<module>features/org.eclipse.embedcdt.templates.chirpwow-feature</module>
+
 		<module>branding/org.eclipse.embedcdt.templates.stm-branding</module>
 		<module>plugins/org.eclipse.embedcdt.templates.stm.ui</module>
 		<module>features/org.eclipse.embedcdt.templates.stm-feature</module>
