refactor: rename c project template
1. Rename template.
2. Revise typo.

--- a/branding/org.eclipse.embedcdt.templates.chirpwow-branding/plugin.properties
+++ b/branding/org.eclipse.embedcdt.templates.chirpwow-branding/plugin.properties
@@ -13,6 +13,6 @@
 #   Liviu Ionescu - extract branding
 ###############################################################################
 
-bundle.name=Embedded C ChirpWow ARM Cortex-M Project Template Branding Plug-in
+bundle.name=Embedded C/C++ ChirpWow CW900X Project Template Branding Plug-in
 bundle.vendor=Eclipse Embedded CDT
 
