--- a/features/org.eclipse.embedcdt.templates.chirpwow-feature/feature.properties
+++ b/features/org.eclipse.embedcdt.templates.chirpwow-feature/feature.properties
@@ -18,13 +18,13 @@
 # This file should be translated.
 
 # "featureName" property - name of the feature
-featureName=Embedded C ChirpWow ARM Cortex-M Project Template
+featureName=Embedded C/C++ ChirpWow CW900X Project Template
 
 # "providerName" property - name of the company that provides the feature
 providerName=Eclipse Embedded CDT
 
 # "description" property - description of the feature
-description=Templates for creating new projects for ChirpWow ARM Cortex-M processors.
+description=Templates for creating new projects for CW900X Arm Cortex-M processors.
 
 # copyright
 copyright=\
