--- a/plugins/org.eclipse.embedcdt.managedbuild.cross.arm.core/preferences.ini
+++ b/plugins/org.eclipse.embedcdt.managedbuild.cross.arm.core/preferences.ini
@@ -3,11 +3,11 @@
 # Default toolchain name.
 #toolchain.name=GNU Tools for ARM Embedded Processors
 #toolchain.name=GNU MCU Eclipse ARM Embedded GCC
-#toolchain.name=xPack GNU ARM Embedded GCC
-toolchain.name=CWLI xPack 3rd Party ARM Embedded GCC
+#toolchain.name=xPack GNU Arm Embedded GCC
+toolchain.name=CWLI xPack 3rd Party Arm Embedded GCC
 
 # -----------------------------------------------------------------------------
-# CWLI xPack 3rd Party ARM Embedded GCC
+# CWLI xPack 3rd Party Arm Embedded GCC
 
 toolchain.xpack.names.358484712=\
 @xpack-dev-tools/arm-none-eabi-gcc
@@ -290,7 +290,7 @@ ${user.home}/.local:\
 /opt
 
 # -----------------------------------------------------------------------------
-# xPack GNU ARM Embedded GCC
+# xPack GNU Arm Embedded GCC
 
 toolchain.xpack.names.1563575434=\
 @xpack-dev-tools/arm-none-eabi-gcc;\
