--- a/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/templates/cw900x_c_project/template.properties
+++ b/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/templates/cw900x_c_project/template.properties
@@ -13,34 +13,34 @@
 ###############################################################################
 
 #Template Default Values
-CW.template.label=ChirpWow ARM Cortex-M C/C++ Project
-CW.template.description=A managed C/C++ project for \
+CW900X.template.label=ChirpWow CW900X C/C++ Project
+CW900X.template.description=A managed C/C++ project for \
 the Arm Cortex-M processors.
 
 # Used to configure the target wizard
-CW.group.target.label=Target processor settings
-CW.group.target.description=Select the target processor family and define flash and RAM sizes.
+CW900X.group.target.label=Target processor settings
+CW900X.group.target.description=Select the target processor family and define flash and RAM sizes.
 
-CW.core.label=Processor core:
-CW.core.description=The Arm Cortex-M core (M0, M0+).
+CW900X.core.label=Processor core:
+CW900X.core.description=The Arm Cortex-M core (M0, M0+).
 
-CW.flashSize.label=Flash size (kB):
-CW.flashSize.description=The internal flash size in kB.
-CW.flashSize.default=256
+CW900X.flashSize.label=Flash size (kB):
+CW900X.flashSize.description=The internal flash size in kB.
+CW900X.flashSize.default=256
 
-CW.ramSize.label=RAM size (kB):
-CW.ramSize.description=\
+CW900X.ramSize.label=RAM size (kB):
+CW900X.ramSize.description=\
 The internal RAM size in kB. It must match \n\
 exactly the physical RAM size, not more,\n\
 not less.
-CW.ramSize.default=64
+CW900X.ramSize.default=64
 
-CW.xtalValue.label=Clock (Hz):
-CW.xtalValue.description=The external clock frequency, in Hz.
-CW.xtalValue.default=60000000
+CW900X.xtalValue.label=Clock (Hz):
+CW900X.xtalValue.description=The external clock frequency, in Hz.
+CW900X.xtalValue.default=60000000
 
-CW.content.label=Content:
-CW.content.description=Select the project content.
+CW900X.content.label=Content:
+CW900X.content.description=Select the project content.
 
 # Common definitions
 syscalls.label=Use system calls:
@@ -84,18 +84,18 @@ sysDir.label=System folder:
 sysDir.description=Folder for the system files.
 sysDir.default=system
 
-cmsisDir.label=CMSIS library folder:
+cmsisDir.label=CMSIS-Core(M) library folder:
 cmsisDir.description=Folder for the CMSIS files.
 cmsisDir.default=cmsis
 
-newlibDir.label=C library folder:
-newlibDir.description=Folder for newlib related files.
-newlibDir.default=newlib
+newlibDir.label=Core library folder:
+newlibDir.description=Folder for corelib related files.
+newlibDir.default=corelib
 
 ldscriptsDir.label=Linker scripts folder:
 ldscriptsDir.description=Folder for the linker scripts files.
 ldscriptsDir.default=ldscripts
 
-deviceName.label=Vendor CMSIS name:
-deviceName.description=Name of specific device (from CMSIS system_XXX.h).
-deviceName.default=cwcmsis
+deviceName.label=Platform/Board peripheral library folder:
+deviceName.description=Folder for driver related files.
+deviceName.default=drivers
