--- a/branding/org.eclipse.embedcdt.templates.chirpwow-branding/about.properties
+++ b/branding/org.eclipse.embedcdt.templates.chirpwow-branding/about.properties
@@ -20,7 +20,7 @@
 # This file should be translated.
 # NOTE TO TRANSLATOR: Please do not translate the featureVersion variable.
 
-blurb=Embedded C ChirpWow ARM Cortex-M Project Template\n\
+blurb=Embedded C/C++ ChirpWow CW900X Project Template\n\
 \n\
 Version: {featureVersion}\n\
 \n\
