--- a/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/plugin.properties
+++ b/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/plugin.properties
@@ -12,6 +12,6 @@
 #   Liviu Ionescu - Arm version
 ###############################################################################
 
-bundle.name=Embedded C ChirpWow ARM Cortex-M Project Template Plug-in
+bundle.name=Embedded C/C++ ChirpWow CW900X Project Template Plug-in
 bundle.vendor=Eclipse Embedded CDT
 
