--- a/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/plugin.xml
+++ b/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/plugin.xml
@@ -17,13 +17,13 @@
 	<extension point="org.eclipse.cdt.core.templates">
 		<template
 			filterPattern=".*g[c\+][c\+]"
-			id="org.eclipse.embedcdt.templates.chirpwow.ui.cw90xx.c.project"
-			location="$nl$/templates/chirpwow_project/template.xml"
+			id="org.eclipse.embedcdt.templates.chirpwow.ui.cw900x.c.project"
+			location="$nl$/templates/cw900x_c_project/template.xml"
 			projectType="org.eclipse.cdt.build.core.buildArtefactType.exe">
 		</template>
 	</extension>
 	<extension point="org.eclipse.cdt.core.templateAssociations">
-		<template id="org.eclipse.embedcdt.templates.chirpwow.ui.cw90xx.c.project">
+		<template id="org.eclipse.embedcdt.templates.chirpwow.ui.cw900x.c.project">
 			<toolChain id="ilg.gnuarmeclipse.managedbuild.cross.toolchain.base">
 			</toolChain>
 		</template>
