refactor: rename variable
As subject.

--- a/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/templates/cw900x_c_project/template.properties
+++ b/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/templates/cw900x_c_project/template.properties
@@ -96,6 +96,6 @@ ldscriptsDir.label=Linker scripts folder:
 ldscriptsDir.description=Folder for the linker scripts files.
 ldscriptsDir.default=ldscripts
 
-deviceName.label=Platform/Board peripheral library folder:
-deviceName.description=Folder for driver related files.
-deviceName.default=drivers
+driverDir.label=Platform/Board peripheral library folder:
+driverDir.description=Folder for peripheral related files.
+driverDir.default=drivers
