feat: make completion of `chirpwow` example plug-ins
Add subject.

--- a/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/templates/cw900x_c_project/template.properties
+++ b/plugins/org.eclipse.embedcdt.templates.chirpwow.ui/templates/cw900x_c_project/template.properties
@@ -64,6 +64,9 @@ useOg.description=Use the new optimization flag for the debug configurations.
 useNano.label=Use newlib nano
 useNano.description=Use the size optimised version of newlib.
 
+excludeUnused.label=Exclude resource
+excludeUnused.description=Exclude resource drivers from build.
+
 useLto.label=Use link optimizations
 useLto.description=Use Link Time Optimizations (-flto).
 
